@@ -1,3 +1,9 @@
+2008-02-06  Callum McKenzie  <callum@spooky-possum.org>
+
+	* stickynotes_applet.c (stickynotes_applet_update_icon): Patch
+	from Brian Cameron to avoid a crash on really small panels. Bug
+	#513536.
+
 2008-01-17  Gil Forcada  <gforcada@gnome.org>
 
 	* docs/ca/ca.po: Added Catalan translation.
